crates/djls-project/tests/snapshots/corpus__repos__django-6.0__django__templatetags__l10n.py.snap
---
source: crates/djls-project/tests/corpus.rs
expression: snapshot(result)
---
tag_rules:
  "django.templatetags.l10n::tag::localize":
    arg_constraints:
      - Max: 2
    required_keywords: []
    choice_at_constraints:
      - position:
          Forward: 1
        values:
          - "on"
          - "off"
    known_options: ~
    diagnostic_messages:
      - constraint:
          ArgumentCount:
            Max: 2
        message:
          PercentFormat:
            template: "%r argument should be 'on' or 'off'"
            args:
              - SplitElement:
                  Forward: 0
      - constraint:
          ChoiceAt:
            position:
              Forward: 1
            values:
              - "on"
              - "off"
        message:
          PercentFormat:
            template: "%r argument should be 'on' or 'off'"
            args:
              - SplitElement:
                  Forward: 0
    extracted_args:
      - name: arg1
        required: true
        kind: Variable
    as_var: keep
filter_arities:
  "django.templatetags.l10n::filter::localize": no_argument
  "django.templatetags.l10n::filter::unlocalize": no_argument
block_specs:
  "django.templatetags.l10n::tag::localize":
    body_analysis_evidence: not_detected
    end_tag: endlocalize
    intermediates: []
